emulator/src/preprocessor/snapshots/z33_emulator__preprocessor__tests__parse_error_in_include_test.snap
---
source: emulator/src/preprocessor/mod.rs
assertion_line: 842
expression: report
---
error: unexpected directive at byte 6: #else
  ┌─ /invalid.S:1:1
  │
1 │ hello
  │ ^
  │
  ┌─ /include.S:1:10
  │
1 │ #include "invalid.S"
  │          ----------- included from here
